--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@
 body {
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
   background-color: #0f1014;
   color: white;
   font-family: "Lexend", serif;
